ensure there is no vertical scrollbar on test page lights-sequence

--- a/app/assets/stylesheets/kata.css.scss
+++ b/app/assets/stylesheets/kata.css.scss
@@ -62,6 +62,7 @@
     margin-left: 5px;
     width: 841px;  // line-numbers=35, file-content=800
     overflow-x: auto;
+    overflow-y: hidden;
     margin-bottom: 5px;
     &::-webkit-scrollbar:horizontal {
         height: 6px;
